<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_error">Connection problem</string>
    <string name="release_date_text_view">Release date: </string>
    <string name="rating_text_view">Rating: </string>
    <string name="runtime_text_view">Runtime: </string>
    <string name="budget_text_view">Budget: </string>
    <string name="revenue_text_view">Revenue: </string>
    <string name="overview_text_view">Overview: </string>
</resources>